--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
-<div class="container">
+<!-- <div class="container">
   @for (category of sectionCategory; track $index) {
     <div class="mt-3">
       <h1 class="text-center">{{sectionTitle[$index]}}</h1>
     <div id="categoryContainer" class="container d-flex">
       @for (item of items; track item.id) {
         @if (item.category == category) {
-          <app-cards [products]='item'></app-cards>
+          <app-cards [products]='item'   (myEvent)="display($event)"></app-cards>
         }
       }
     </div>
   </div>
   }
-</div>
+</div> -->
+
+<app-navbar></app-navbar>
+<app-contact></app-contact>
+<router-outlet></router-outlet>
+
