--- a/src/app/ui/cards/navbar/navbar.component.css
+++ b/src/app/ui/cards/navbar/navbar.component.css
@@ -5,6 +5,7 @@ ul{
     font-size: 30px;
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-bottom: 100px;
     background-color: yellow;
 }
 
