--- a/src/app/ui/cards/cards.component.html
+++ b/src/app/ui/cards/cards.component.html
@@ -1,6 +1,6 @@
 <div class="col p-2">
   <div class="card" style="width: 18rem;">
-      <img [src]="{{products.thumbnail}}" class="card-img-top" alt="">
+      <img src="{{products.thumbnail}}" class="card-img-top" alt="">
       <div class="card-body">
           <h5 class="card-title text-center">{{products.title}}</h5>
         <p class="card-text">{{products.description}}</p>
