--- a/src/app/ui/cards/navbar/navbar.component.html
+++ b/src/app/ui/cards/navbar/navbar.component.html
@@ -2,5 +2,6 @@
     <li routerLink="/">Home</li>
     <li routerLink="/contact">Contact</li>
     <li routerLink="/login">Login</li>
+    <li routerLink="/signup">Signup</li>
     <li routerLink="/districts">Districts</li>
 </ul>
